Broke out spotify functionality into separate file. Tweaked playlist / queuing functionality. Changed URL to playqueue when playing in queue. Minor formatting changes. Added boomtown data.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,3 +10,10 @@ background-size: 800px 92px;
 body {
   background-image: url('/assets/old_mathematics.png');
 }
+
+.playlistContainer {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 200px;
+  width: auto;
+}
