--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,8 +16,7 @@ div, h1, h2 {
   display:none;
 }
 
-.offlineContainer > h1 {
-  margin-top: 40px;
+.message > h1 {
   font-size: 22px;
   text-shadow: 0px 1px 1px #4d4d4d;
   color: #222;
