--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,6 +32,7 @@ div, h1, h2 {
 .container {
   margin: 0 auto;
   width: 640px;
+  display:none;
 }
 
 .brandbar {
@@ -100,7 +101,7 @@ h2 {
 #addPlaylist {
   float:right;
   margin-bottom: 5px;
-  display: none;
+/*  display: none;*/
 }
 
 .box{
