--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,7 @@
 html {
   background-image: url('/assets/gplaypattern.png');
-    margin-top: 0;
+  margin-top: 0;
+  overflow: auto;
 }
 
 body {
@@ -20,7 +21,7 @@ div, h1, h2 {
 
 .message > h1 {
   font-size: 22px;
-  text-shadow: 0px 1px 1px #4d4d4d;
+  text-shadow: 0 1px 1px #4d4d4d;
   color: #222;
 }
 
@@ -33,6 +34,8 @@ div, h1, h2 {
   margin: 0 auto;
   width: 640px;
   display:none;
+  height: 1200px;
+
 }
 
 .brandbar {
@@ -82,6 +85,9 @@ div, h1, h2 {
 .playlists {
   margin: 0 auto;
   width: 600px;
+  height: 400px;
+  overflow-y: auto;
+
 }
 
 h2 {
@@ -135,12 +141,11 @@ h2 {
 }
 
 /* Spotify overrides */
-
 .sp-list {
   width: 600px;
   height: 300px;
 }
-
+/*
 .sp-item > .sp-track-field-star {
   width: 40px;
 }
@@ -149,7 +154,4 @@ h2 {
 .sp-track-field-artist { width: 150px; }
 .sp-track-field-popularity { width: 40px; }
 
-/* overriding adam/eve.css */
-.sp-list a > :nth-child(2) {
-/*width: 250px;*/
-}
+*/
