--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+/* basic page */
 html {
   background-image: url('/assets/gplaypattern.png');
   margin-top: 0;
@@ -13,101 +14,31 @@ div, h1, h2 {
   font-family: "Helvetica";
 }
 
+ul {
+  margin-left: 0; 
+  padding-left: 0; 
+  display:block;
+  list-style-type: none;
+}
+
+/* general custom styles */
+
+.container {
+  margin: 0 auto;
+  width: 640px;
+  display:none;
+  height: 100%;
+
+}
+
 .offlineContainer {
   margin: 0 auto;
   width: 640px;
   display:none;
 }
 
-.message > h1 {
-  font-size: 22px;
-  text-shadow: 0 1px 1px #4d4d4d;
-  color: #222;
-}
-
-
 .offlineContainer > h2 {
   font-size: 18px;
-}
-
-.container {
-  margin: 0 auto;
-  width: 640px;
-  display:none;
-  height: 1200px;
-
-}
-
-.brandbar {
-  background-image: url('/assets/header.jpg');
-  background-size: 800px 92px;
-  width: 300px;
-  height: 60px;
-  margin: 0 auto;
-
-  box-shadow:0px 1px 1px rgba(255,255,255,0.8) 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius:0px 0px 4px 4px;
-  transition:box-shadow 0.3s ease-in-out;
-}
-
-.brandbar > h1 {
-  display: inline-block;
-  padding-top: 5px;
-  font-size: 30px;
-  color: #e2e2e2;
-  text-shadow: 0px 0px 1px #4d4d4d;
-}
-
-#stagesList {
-  width: 200px;
-  height: 100px;
-}
-
-.festivals {
-  width: 200px;
-  display: inline-block;
-  vertical-align: top;
-  padding: 10px;
-  height: 135px;
-}
-
-.festivals select {
-  width: 80%;
-}
-
-.stages {
-  width: 350px;
-  display: inline-block;
-  padding: 10px;
-  height: 135px;
-}
-
-.playlists {
-  margin: 0 auto;
-  width: 600px;
-  height: 400px;
-  overflow-y: auto;
-
-}
-
-h2 {
-  font-size: 22px;
-}
-
-
-#playerNode {
-  display: inline-block;
-}
-
-h2 {
-  text-shadow: 0px 1px 1px #4d4d4d;
-  color: #222;
-}
-
-#addPlaylist {
-  float:right;
-  margin-bottom: 5px;
-/*  display: none;*/
 }
 
 .box{
@@ -138,6 +69,127 @@ h2 {
   background: linear-gradient(to bottom, rgba(255,255,255,0.5) 0%,rgba(229,229,229,0.5) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
 
+}
+
+/* festival box */
+.festivals {
+  width: 600px;
+  display: inline-block;
+  vertical-align: top;
+  margin: 10px;
+  height: 135px;
+}
+
+#festivalsList {
+  width: 600px;
+  display: inline-block;
+}
+
+#festivalsList li:nth-child(3n+1) {
+  width:30%;
+  float: left;
+  clear: both;
+}
+
+#festivalsList li:nth-child(3n+2) {
+  width:30%;
+  float: left;
+}
+
+#festivalsList li:nth-child(3n) {
+  width:30%;
+  float: left;
+}
+
+/* stages box */
+.stages {
+  width: 600px;
+  display: inline-block;
+  margin: 10px;
+  height: 135px;
+  overflow-y: auto;
+}
+
+#stagesList {
+  width: 600px;
+  display: inline-block;
+}
+
+#stagesList li:nth-child(3n+1) {
+  width:30%;
+  float: left;
+  clear: both;
+}
+
+#stagesList li:nth-child(3n+2) {
+  width:30%;
+  float: left;
+}
+
+#stagesList li:nth-child(3n) {
+  width:30%;
+  float: left;
+}
+
+/* playlist box */
+.playlists {
+  margin: 10 auto;
+  width: 600px;
+  height: 400px;
+  overflow-y: auto;
+}
+
+#playerNode {
+  display: inline-block;
+}
+
+/* other */
+
+li {
+  display:block;
+}
+
+
+.message > h1 {
+  font-size: 22px;
+  text-shadow: 0 1px 1px #4d4d4d;
+  color: #222;
+}
+
+
+
+
+.brandbar {
+  background-image: url('/assets/header.jpg');
+  background-size: 800px 92px;
+  width: 300px;
+  height: 60px;
+  margin: 0 auto;
+
+  box-shadow:0px 1px 1px rgba(255,255,255,0.8) 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius:0px 0px 4px 4px;
+  transition:box-shadow 0.3s ease-in-out;
+}
+
+.brandbar > h1 {
+  display: inline-block;
+  padding-top: 5px;
+  font-size: 30px;
+  color: #e2e2e2;
+  text-shadow: 0px 0px 1px #4d4d4d;
+}
+
+h2 {
+  font-size: 22px;
+  line-height: 0;
+  text-shadow: 0px 1px 1px #4d4d4d;
+  color: #222;
+}
+
+#addPlaylist {
+  float:right;
+  margin-bottom: 5px;
+/*  display: none;*/
 }
 
 /* Spotify overrides */
