--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,7 +77,6 @@ ul {
   display: inline-block;
   vertical-align: top;
   margin: 10px;
-  height: 135px;
 }
 
 #festivalsList {
@@ -101,12 +100,35 @@ ul {
   float: left;
 }
 
+#festivalsList input[type="radio"] {
+    display:none;
+}
+
+#festivalsList input[type="radio"] + label span {
+    display:inline-block;
+    width:19px;
+    height:19px;
+    margin:-1px 4px 0 0;
+    vertical-align:middle;
+    background:url('/assets/check_radio_sheet.png') -38px top no-repeat;
+    cursor:pointer;
+}
+#festivalsList  input[type="radio"]:checked + label span {
+    background:url('/assets/check_radio_sheet.png') -57px top no-repeat;
+}
+
+
+/*
+label input[type="checkbox"]:checked +  span {
+    background:url(check_radio_sheet.png) -19px top no-repeat;
+}
+*/
+
 /* stages box */
 .stages {
   width: 600px;
   display: inline-block;
   margin: 10px;
-  height: 135px;
   overflow-y: auto;
 }
 
@@ -130,6 +152,24 @@ ul {
   width:30%;
   float: left;
 }
+
+#stagesList input[type="checkbox"] {
+    display:none;
+}
+
+#stagesList input[type="checkbox"] + label span {
+    display:inline-block;
+    width:19px;
+    height:19px;
+    margin:-1px 4px 0 0;
+    vertical-align:middle;
+    background:url('/assets/check_radio_sheet.png') left top no-repeat;
+    cursor:pointer;
+}
+#stagesList  input[type="checkbox"]:checked + label span {
+    background:url('/assets/check_radio_sheet.png') -19px top no-repeat;
+}
+
 
 /* playlist box */
 .playlists {
