--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,7 @@ html {
 
 body {
   background: transparent;
-  margin-top: 0;
+  margin: 0;
 }
 
 div, h1, h2 {
@@ -202,22 +202,21 @@ li {
 
 .brandbar {
   background-image: url('/assets/header.jpg');
+  background-position: 0px -10px;
   background-size: 800px 92px;
-  width: 300px;
-  height: 60px;
+  width: 100%;
+  height: 40px;
+  line-height: 0;
   margin: 0 auto;
-
-  box-shadow:0px 1px 1px rgba(255,255,255,0.8) 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius:0px 0px 4px 4px;
-  transition:box-shadow 0.3s ease-in-out;
 }
 
 .brandbar > h1 {
   display: inline-block;
-  padding-top: 5px;
   font-size: 30px;
-  color: #e2e2e2;
+  margin-left: 10px;
+  color: #32c232;
   text-shadow: 0px 0px 1px #4d4d4d;
+  -webkit-text-stroke: 1px #3e3e3e;
 }
 
 h2 {
